<resources>
    <string name="app_name">GO SOPT Android</string>
    <string name="hello">Hello world!</string>
    <string name="welcome_to_go_android">Welcome to GO Android !</string>
    <string name="id">ID</string>
    <string name="et_hint_id">아이디를 입력하세요.</string>
    <string name="et_hint_pw">비밀번호를 입력하세요.</string>
    <string name="et_hint_title">타이틀을 입력하세요.</string>
    <string name="et_hint_singer">가수를 입력하세요.</string>
    <string name="login">LOGIN</string>
    <string name="pw">PW</string>
    <string name="sign_up">SIGN UP</string>
    <string name="specialty">특기:</string>
    <string name="name">이름:</string>
    <string name="tv_name">이름</string>
    <string name="et_name">이름을 입력하세요.</string>
    <string name="tv_specialty">특기</string>
    <string name="et_specialty">특기를 입력하세요.</string>
    <string name="confirm_signup">회원가입 완료</string>
    <string name="bottom_home">홈</string>
    <string name="bottom_search">검색</string>
    <string name="bottom_gallery">갤러리</string>
    <string name="repo_name_title">Repo Name</string>
    <string name="repo_name">SeoHyeon</string>
    <string name="fragment_gallery">Gallery</string>
    <string name="fragment_search">Search</string>
    <string name="string_search">검색어를 입력해주세요.</string>
    <string name="home_main_title">User List</string>
    <string name="home_sub_title">List of lists applied with motionLayout</string>
</resources>