<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="30dp"/>
    <EditText
        android:id="@+id/et_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_id"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:maxLength="10"
        android:hint="@string/et_hint_id" />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_id"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="30dp"/>


    <EditText
        android:id="@+id/et_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_pw"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:maxLength="12"
        android:inputType="textPassword"
        android:hint="@string/et_hint_pw"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_pw"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="30dp"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:inputType="textPassword"
        android:hint="@string/et_name"/>

    <TextView
        android:id="@+id/tv_specialty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_specialty"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="30dp"/>

    <EditText
        android:id="@+id/et_specialty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_specialty"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:inputType="textPassword"
        android:hint="@string/et_specialty"/>


    <Button
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/confirm_signup"
        android:layout_marginTop="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_specialty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>