<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/iv_cat"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="64dp"/>

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/id"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/tv_specialty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/specialty"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>